objects/DataDotComDemo__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>DemoAccount__c</fullName>
        <label>DemoAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DemoContact__c</fullName>
        <label>DemoContact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DemoLead__c</fullName>
        <label>DemoLead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResetDataDate__c</fullName>
        <label>ResetDataDate</label>
        <type>Date</type>
    </fields>
    <label>DataDotComDemo</label>
</CustomObject>